# keystone

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  Makefile  README.md  dump.md  mehdi_cofounders_split.md  mehdi_development_plan.md  mehdi_overview.md  mehdi_trap_ideas.md  package.json  pnpm-lock.yaml  pytest.ini
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  (+1 more)
backend/: README.md  pyproject.toml
backend/src/: cli.py  main.py
backend/src/api/: router.py
backend/src/api/routes/: health.py
backend/src/core/: settings.py
backend/src/services/: health_service.py
backend/tests/integration/: test_local_runtime_health.py
backend/tests/unit/: test_quality_config.py  test_settings.py
docs/: DESIGN.md
english/: 05-technical-architecture.md  07-competition-differentiation.md  Keystone_Executive_Brief_v2_EN.docx  README.md
frontend/: README.md  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
richards/: Keystone_Phase1_Mockup.html
scripts/: bootstrap.sh  dev.sh  format.sh  healthcheck.sh  lint.sh  provision-local.sh  test.sh  wait-for-dependencies.sh
worker/: README.md  pyproject.toml
worker/src/: cli.py  main.py
worker/src/jobs/: bootstrap_job.py
worker/src/queue/: sqs_adapter.py
worker/src/schedules/: local_scheduler.py
worker/src/services/: settings.py
worker/tests/integration/: test_local_dependencies.py
worker/tests/unit/: test_local_scheduler.py
(+114 files in other folders)
