[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "keystone-worker"
version = "0.1.0"
description = "Keystone background worker runtime"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.38.19,<2.0.0",
  "pydantic-settings>=2.6.1,<3.0.0"
]

[project.scripts]
keystone-worker-info = "src.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.11,<1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = true